--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo\\\"Error: no test specified\\\" && exit 1"
+    "test": "echo\\\"Error: no test specified\\\" && exit 1",
+    "build:ui": "@powershell Remove-Item -Recurse -Force build && cd ../../Osio_02/notes && npm run build && @powershell Copy-Item build -Recurse ../../Osio_03/notes",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Roope Kantola",
   "license": "",
