--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo\\\"Error: no test specified\\\" && exit 1",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "build:ui": "@powershell Remove-Item -Recurse -Force build && cd ../../Osio_02/notes && npm run build && @powershell Copy-Item build -Recurse ../../Osio_03/notes",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Roope Kantola",
   "license": "",
@@ -20,7 +20,14 @@
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.44.0",
-    "nodemon": "^2.0.22"
+    "jest": "^29.6.2",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
   }
 }
